--- a/src/popup.html
+++ b/src/popup.html
@@ -116,32 +116,87 @@
   </div>
 
   <div class="panel container-panel hide" id="container-panel">
-    <div id="current-tab">
-      <h3>Current Tab</h3>
-      <div id="current-page"></div>
-      <label for="container-page-assigned">
-        <input type="checkbox" id="container-page-assigned" />
-        <span class="truncate-text">
-          Always open in
-          <span id="current-container"></span>
-        </span>
-      </label>
+    <h3>
+      Multi-Account Containers
+    </h3>
+    <hr>
+    <table class="menu">
+      <tr class="menu-item">
+        <td>
+          <span class="menu-icon">O</span>
+          <span class="menu-text">Open New Tab in...</span>
+            <span class="menu-arrow">
+              <img alt="Container Info" src="/img/arrow-icon-right.svg" />
+            </span>
+        </td>
+      </tr>
+      <tr class="menu-item">
+        <td>
+          <span class="menu-icon">X</span>
+          <span class="menu-text">Reopen This Site in...</span>
+            <span class="menu-arrow">
+              <img alt="Container Info" src="/img/arrow-icon-right.svg" />
+            </span>
+        </td>
+      </tr>
+    </table>
+    <hr>
+    <table class="menu">
+      <tr class="menu-item">
+        <td>
+          <div class="menu-icon"></div>
+          <span class="menu-text" id="sort-containers-link">Arrange Tabs by Container</span>
+            <span class="menu-arrow">
+            </span>
+        </td>
+      </tr>
+      <tr class="menu-item">
+        <td>
+          <span class="menu-icon">O</span>
+          <span class="menu-text">Always Open This Site in...</span>
+            <span class="menu-arrow">
+              <img alt="Container Info" src="/img/arrow-icon-right.svg" />
+            </span>
+        </td>
+      </tr>
+    </table>
+    <hr>
+    <div class="sub-header">
+    Containers
     </div>
-    <div class="container-panel-controls">
-      <a href="#" class="action-link" id="sort-containers-link" title="Sort tabs into container order">Sort Tabs</a>
-    </div>
-    <div class="scrollable panel-content" tabindex="-1">
-      <table class="identities-list">
-        <tbody></tbody>
-      </table>
-    </div>
-    <div class="panel-footer edit-identities">
-      <div class="edit-containers-text panel-footer-secondary">
-        <a href="#" tabindex="0" id="edit-containers-link">Edit Containers</a>
-      </div>
-      <a href="#" tabindex="0" class="add-container-link pop-button" id="container-add-link" title="Create new container">
-        <img class="pop-button-image-small icon" alt="Create new container icon" src="/img/container-add.svg" />
-      </a>
+    <table class="menu" id="identities-list">
+      <tr class="menu-item">
+        <td>
+          <div class="menu-icon">
+            <div class="usercontext-icon"
+              data-identity-icon="pet"
+              data-identity-color="blue">
+            </div>
+          </div>
+          <span class="menu-text">Default</span>
+          <span class="menu-right-float">
+            <span class="container-count">22</span>
+            <span class="menu-arrow">
+              <img alt="Container Info" src="/img/arrow-icon-right.svg" />
+            </span>
+          </span>
+        </td>
+      </tr>
+      <tr class="menu-item">
+        <td class="hover-highlight">
+          <span class="menu-icon">O</span>
+          <span class="menu-text">Personal</span>
+          <span class="menu-right-float">
+            <span class="container-count">7</span>
+            <span class="menu-arrow">
+              <img alt="Container Info" src="/img/arrow-icon-right.svg" />
+            </span>
+          </span>
+        </td>
+      </tr>
+    </table>
+    <div class="bottom-btn">
+      Manage Containers
     </div>
   </div>
 
